<resources>
    <string name="app_name">WeatherAppChanged</string>
    <string name="location">Location</string>
    <string name="updated_at">Updated at</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>