<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradientbg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/userLocationContainer"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userLocation"
                android:textSize="14sp"
                android:hint="Enter location"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/searchLocation"
                android:src="@drawable/search"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/currrentLocation"
                android:src="@drawable/current_location"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_below="@+id/userLocationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/address"
                android:textSize="24sp"
                android:text="@string/location"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/updated_at"
                android:textSize="14sp"
                android:text="@string/updated_at"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <!--<TextView
                android:id="@+id/lati"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/longi"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_marginTop= "150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="Clear Sky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/temp"
                android:textSize="90sp"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="--°C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/feelsLike"
                    android:text="ReelFeel"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/humidity1"
                    android:text="@string/max_temp"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/wind"
                    android:text="@string/wind"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/pressure"
                    android:text="@string/pressure"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <!--<LinearLayout
            android:id="@+id/detailsContainer"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/sunrise"
                        android:textSize="14sp"
                        android:text="5:30am"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/sunset"
                        android:textSize="14sp"
                        android:text="8:30pm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/wind"
                        android:textSize="14sp"
                        android:text="10 kph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>



            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/pressure"
                        android:textSize="14sp"
                        android:text="5:30am"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/humidity"
                        android:textSize="14sp"
                        android:text="5:30am"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="Info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/info"
                        android:textSize="14sp"
                        android:text="5:30am"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>-->

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>